@@ -1,13 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-# $Id: Makefile.am,v 1.4 2002-04-29 14:50:27 themnemonic Exp $
-
-## if DO_DEBUG
-## CFLAGS = -O0 -Wall -g3 -ggdb3 -DDEBUG
-## else
-## CFLAGS = -O2 -Wall -DNDEBUG
-## endif
-
-CFLAGS = -O0 -Wall -g3 -ggdb3 -DDEBUG
+# $Id: Makefile.am,v 1.5 2002-04-29 19:47:03 themnemonic Exp $
 
 bin_PROGRAMS = netcat
 netcat_SOURCES = \
